@@ -31,12 +31,13 @@ exports.InvalidRequestBodyError = InvalidRequestBodyError;
  *   - cert     Public X509 certificate to use (HTTPS only)
  */
 function run(app, opts, callback) {
+    opts = opts || {};
+
     if (typeof opts == "function") {
         callback = opts;
         opts = null;
     }
 
-    opts = opts || {};
     opts.port = opts.port || 1982;
 
     var server;
@@ -46,9 +47,24 @@ function run(app, opts, callback) {
         server = createServer(app);
     }
 
-    if (typeof callback == "function") {
-        server.on("listening", callback);
-    }
+    server.on("listening", function () {
+        console.log(">> Strata web server version " + exports.version.join("."));
+
+        var addr = server.address(),
+            msg = "Listening on " + addr.address;
+
+        if (!opts.socket) {
+            msg += ":" + addr.port;
+        }
+
+        msg += ", CTRL+C to stop";
+
+        console.log(">> " + msg);
+
+        if (typeof callback == "function") {
+            callback();
+        }
+    });
 
     if (opts.socket) {
         server.listen(opts.socket);
